# downstream-builder

./: .env-example  Containerfile  Dockerfile  README.md  pyproject.toml
.github/workflows/: pr.yaml
configs/: gitconfig  krb5.conf
discobuilder/: __init__.py  __main__.py  config.py  server.py
discobuilder/adapter/: chaski.py  git.py  kerberos.py  rhpkg.py  rpmbuild.py  subprocess.py
discobuilder/builder/: __init__.py  cli.py  installer.py  server.py
scripts/: helper.py  helper.sh
